tester_ft/log/compile_error_vec_8.txt
-VECTOR PUSH BACK TEST-

./tmp/outfile_vec_8.cpp:33:42: error: no member named 'begin' in 'ft::vector<int>'
                if (!std::equal(v1.begin(),v1.end(),v2.begin()))
                                                    ~~ ^
1 error generated.
